# flight-delay-prediction

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f0e4d6f346e5_initial_predictions_table.py
backend/ml/: README.md  lightgbm_default_model.pkl  lightgbm_optimized_model.pkl
backend/src/: main.py
backend/src/agents/: __init__.py  base.py  catboost_default.py  catboost_optimized.py  lightgbm_default.py  lightgbm_optimized.py
backend/src/api/: dependencies.py  router.py
backend/src/api/v1/: predictions.py
backend/src/core/: db_helper.py
backend/src/core/config/: app.py  base.py  database.py  ml.py  settings.py
backend/src/core/enums/: __init__.py  agents.py
backend/src/core/models/: __init__.py  prediction.py
backend/src/core/schemas/: __init__.py  agents.py  predictions.py
backend/src/dao/: predictions.py
backend/src/services/: predictions.py
backend/src/utils/: __init__.py  agents_setup.py
docker/scripts/: run.sh
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: HistoryTable.tsx  ModelStatus.tsx  PredictionForm.tsx
frontend/src/lib/: api.ts
